2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/totem-dvb-setup.c (totem_dvb_setup_helper),
	(child_watch_func), (totem_dvb_setup_device):
	* src/totem-dvb-setup.h:
	* src/totem.c (totem_dvb_setup_result), (totem_action_load_media):
	Add support for a helper script in $(libexecdir)/totem-dvb-scanner
	that would scan for channels on the specified adapter when loading
	the channels list fails

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/thumbnail/totem-thumbnail.c (update_from_state):
	Look for the thumbnail in the normal and large thumbnails, not
	twice in the normal ones, spotted by Robin Stocker <robin@nibor.org>

2008-07-23  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Fix mnemonics overlap between Sidebar button
	and Sound menu (Closes: #522275)

2008-07-17  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize), (bacon_video_widget_set_zoom):
	Apply the zoom level even if there's no stream yet
	* src/totem.c (totem_action_zoom_reset): Make sure that we
	use the zoom constants rather than some hard coded numbers

2008-07-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c (totem_interface_load),
	(totem_interface_load_with_full_path): Fix a crasher
	when GtkBuilder interface files are missing (Closes: #542446)

2008-07-14  Bastien Nocera  <hadess@hadess.net>

	* src/backend/Makefile.am: Patch from Götz Waschk
	<waschk@mandriva.org> to fix the build with nvtv enabled
	(Closes: #541546)

2008-07-09  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Resolve the video URI of YouTube
	videos when loading search results, rather than when playing them
	to ensure URIs added to the playlist are correct. (Closes: #541916)

2008-06-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget.h: Kill bacon_video_widget_can_play
	and get errors directly from _get_mrls().
