@@ -63,3 +63,5 @@ src/plugins/tracker/totem-tracker.c
 [type: gettext/glade]src/plugins/youtube/youtube.ui
 src/plugins/youtube/youtube.py
 browser-plugin/totem-plugin-viewer.c
+[type: gettext/ini]src/plugins/pythonconsole/pythonconsole.totem-plugin.in
+src/plugins/pythonconsole/pythonconsole.py
