@@ -1,0 +1,9 @@
+[Totem Plugin]
+Loader=python
+Module=pythonconsole
+IAge=1
+_Name=Python Console
+_Description=Interactive python console.
+Authors=Steve Frécinaux <steve@istique.net>
+Copyright=Copyright © 2006 Steve Frécinaux
+Website=http://www.gnome.org/projects/totem/
