@@ -133,6 +133,10 @@ done
 %{_libdir}/totem/plugins/youtube/*.pyo
 %{_libdir}/totem/plugins/youtube/youtube.totem-plugin
 %{_libdir}/totem/plugins/youtube/youtube.ui
+%{_libdir}/totem/plugins/pythonconsole/*.py
+%{_libdir}/totem/plugins/pythonconsole/*.pyc
+%{_libdir}/totem/plugins/pythonconsole/*.pyo
+%{_libdir}/totem/plugins/pythonconsole/pythonconsole.totem-plugin
 %{_libexecdir}/totem/totem-bugreport.*
 
 %files mozplugin
