@@ -1,3 +1,7 @@
+2008-07-30  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: Add Python console
+
 2008-07-29  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
