@@ -1,3 +1,13 @@
+2008-07-30  Bastien Nocera  <hadess@hadess.net>
+
+	* configure.in:
+	* src/plugins/pythonconsole/Makefile.am:
+	* src/plugins/pythonconsole/console.py:
+	* src/plugins/pythonconsole/pythonconsole.py:
+	* src/plugins/pythonconsole/pythonconsole.totem-plugin.in:
+	* totem.spec.in: Patch from Andrés de Barbará <adebarbara@gmail.com>
+	to add a Python console to Totem (Closes: #542470)
+
 2008-07-29  Bastien Nocera  <hadess@hadess.net>
 
 	* src/Makefile.am:
